--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4BE08C4HCP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-4BE08C4HCP');
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Tic Tac Toe by Rio Elbat</title>
   </head>
   <body>
     <div id="root"></div>
+    <p class="credit">
+      Created by <a href="https://rioelbat.github.io/" target="_blank">Rio Elbat</a> 🐨
+    </p>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
