add learning source link and update preview image ⚛️

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <div id="root"></div>
     <p class="credit">
-      Created by <a href="https://rioelbat.github.io/" target="_blank">Rio Elbat</a> 🐨
+      Created by <a href="https://rioelbat.github.io/" target="_blank">Rio Elbat</a> 🐨 | Tutorial
+      from
+      <a href="https://beta.reactjs.org/learn/tutorial-tic-tac-toe#adding-time-travel">React</a> ⚛️
     </p>
     <script type="module" src="/src/main.jsx"></script>
   </body>
