--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       gtag('config', 'G-4BE08C4HCP');
     </script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe by Rio Elbat</title>
   </head>
